--- a/css/cookie-bar.css
+++ b/css/cookie-bar.css
@@ -5,8 +5,8 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #f8f8f8;
-    color: #333;
+    background-color: #333;
+    color: #fff;
     padding: 1rem 2rem;
     display: flex;
     justify-content: center;
@@ -22,7 +22,7 @@
 
 .cookie-bar button {
     background-color: #007bff;
-    color: #333;
+    color: #fff;
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 5px;
