--- a/css/cookie-bar.css
+++ b/css/cookie-bar.css
@@ -5,8 +5,9 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #333;
-    color: #fff;
+    /* Zmieniono tło na jasnoszare i kolor tekstu na ciemny */
+    background-color: #f8f8f8;
+    color: #333;
     padding: 1rem 2rem;
     display: flex;
     justify-content: center;
@@ -28,6 +29,9 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 1rem;
+    /* Dodano styl dla przycisku, który był wcześniej w JS */
+    margin-left: 10px;
+    padding: 5px 10px;
 }
 
 .cookie-bar button:hover {
