--- a/de/css/section.css
+++ b/de/css/section.css
@@ -46,11 +46,12 @@
 }
 
 .lead {
-    font-size: 24px;
+    font-size: 1.2em;
 
     /* Slightly larger for lead paragraph */
     font-weight: bold;
     margin-bottom: 20px;
+    line-height: 1.4;
     font-family: 'Merriweather', serif;
 
     /* Example font for article body */
